Funcionando sin los campos de CALIBRACIÓN

--- a/front/src/app/calibracion/calibracion.html
+++ b/front/src/app/calibracion/calibracion.html
@@ -1,6 +1,6 @@
 <p>calibracion works!</p>
 <!-- Vista inspirada en tu imagen -->
-<div style="background: #b3d1e6; padding: 20px; border-radius: 8px; width: 370px;">
+<!-- <div style="background: #b3d1e6; padding: 20px; border-radius: 8px; width: 370px;">
   <h2 style="text-align:center;">Calibración</h2>
   <div style="display: flex; justify-content: space-between;">
     <div>
@@ -28,5 +28,5 @@
     <label>Salida</label>
     <textarea [(ngModel)]="salida" rows="3" style="width: 100%;"></textarea>
     <button (click)="enviarSalida()" style="margin-top: 5px;">Enviar</button>
-  </div>
+  </div> -->
 </div>
